	* CONTRIBUTING: Encoding is changed to utf-8 from latin-1 [Teika Kazura]

	* lisp/sawfish/wm/state/maximize.jl: Renamed hooked function `after-add-window' to `maximize-after-add-window'.
	    				     This makes it self-descriptive, so that when you evaluate `after-add-window-hook',
					     you see what's hooked in. [Teika Kazura]

	* man/news.texi: Minor fixes in 1.5.0 section [Teika Kazura]

	* man/sawfish.texi: Better description on font type.
	                    Description on window snapping and cycle-among-groups[-backwards].
			    Usage on environmental variables.
			    -- [Teika Kazura]

	* src/keys.h: Small comment added [Teika Kazura]

	* lisp/sawfish/wm/commands/move-resize.jl: string improvements [Teika Kazura]

2009-08-30  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widget.jl: Number widget can take optional initial value [Teika Kazura]

	* lisp/sawfish/wm/ext/match-window.jl: In configurator GUI, position parameter can take negative value.
					       Depth's initial value is 0. [Teika Kazura]

	* lisp/sawfish/wm/menus.jl: revamped root and window menu

	* lisp/sawfish/wm/ext/fdo-menu.jl: added FDO Applicationmenu support [Matthew Love]

	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/commands/shrink-yank.jl: use same group for options

	* lisp/sawfish/wm/commands/user.jl: ex sawfish.wm.commands.xterm
	                                    `browser' command added (defaults to `www-broser')
					    `some' statement added () [Mark Triggs]
					    `display-message-with-timeout' function added 
					    `program-available' function added [Mark Triggs]
					    `view-clipboard' command [Mark Triggs]

	* lisp/sawfish/wm/user.jl: load sawfish.wm.extras

	* lisp/sawfish/wm/extras.jl: `try-require' function added [Mark Triggs]
				     call update-saw-menu from here (generates fdo-menu)

	* lisp/sawfish/wm/gnome/menus.jl: removed, supersedded by desktop-independ fdo-menu
