@@ -6,6 +6,7 @@
 					     you see what's hooked in. [Teika Kazura]
 
 	* man/news.texi: Minor fixes in 1.5.0 section [Teika Kazura]
+	                 Improved 1.6.0 section
 
 	* man/sawfish.texi: Better description on font type.
 	                    Description on window snapping and cycle-among-groups[-backwards].
@@ -15,6 +16,8 @@
 	* src/keys.h: Small comment added [Teika Kazura]
 
 	* lisp/sawfish/wm/commands/move-resize.jl: string improvements [Teika Kazura]
+
+	* lisp/sawfish/wm/fdo-menu.jl: make it avoidable via (setq use-fod-menu nil) in your resourcefile [Matthew Love]
 
 2009-08-30  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widget.jl: Number widget can take optional initial value [Teika Kazura]
